# panel

./: Cargo.toml  mod.rs
.github/workflows/: test.yml
migration/: Cargo.toml
migration/src/: lib.rs  m20250208_125337_create_user_table.rs
src/: lib.rs  main.rs
src/actix/: mod.rs  validated_json.rs
src/auth/: error.rs  mod.rs
src/auth/controller/: login.rs
src/auth/infrastructure/sql/: auth_impl.rs  mod.rs
src/auth/request/: login.rs  mod.rs  register.rs  renew.rs
src/auth/service/: auth.rs  hash_service.rs  jwt_service.rs  mod.rs
src/config/: config.rs
src/entity/: permission.rs  prelude.rs  role.rs  role_permission.rs  session.rs  user.rs
src/util/: mod.rs  text_util.rs
